tests/wpt/tests/third_party/test262/test/language/statements/class/elements/syntax/early-errors/grammar-privatename-whitespace-error-field-init.js
// This file was procedurally generated from the following sources:
// - src/class-elements/grammar-privatename-whitespace-error-field-init.case
// - src/class-elements/syntax/invalid/cls-decl-elements-invalid-syntax.template
/*---
description: No space allowed between sigil and IdentifierName (Field with Initializer) (class declaration)
esid: prod-ClassElement
features: [class-fields-private, class]
flags: [generated]
negative:
  phase: parse
  type: SyntaxError
info: |
    Updated Productions

    ClassElementName :
      PropertyName
      PrivateName

    PrivateName ::
      # IdentifierName

---*/


$DONOTEVALUATE();

class C {
  # x = 1;
}
